projects/aequitas/gateway/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: aequitas-dev
  labels:
    app: gateway
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  tls:
    - hosts:
        - aequitas-gateway-dev.coherent.in
      secretName: gateway-tls
  rules:
    - host: "aequitas-gateway-dev.coherent.in"
      http:
        paths:
          - path: /auth-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 8016
          - path: /customer-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: customer-svc
                port:
                  number: 7010
